[GTK][WPE] Fix forwarding webkit socket to flatpak sandbox https://bugs.webkit.org/show_bug.cgi?id=192622

Patch by Patrick Griffis <pgriffis@igalia.com> on 2018-12-14
Reviewed by Michael Catanzaro.

This fixes running with the sandbox enabled in Flatpak.

* UIProcess/Launcher/glib/FlatpakLauncher.cpp:
(WebKit::flatpakSpawn):
* UIProcess/Launcher/glib/FlatpakLauncher.h:
* UIProcess/Launcher/glib/ProcessLauncherGLib.cpp:
(WebKit::ProcessLauncher::launchProcess):

Canonical link: https://commits.webkit.org/207277@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239204 268f45cc-cd09-0410-ab3c-d52691b4dbfc